--- a/roles/base_system/tasks/main.yml
+++ b/roles/base_system/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Install base packages
   apt:
-    name: [ 'python3', 'python3-dev', 'python3-pip', 'bash-completion', 'git', 'htop', 'iputils-ping', 'lsb-release', 'lsof', 'ncdu', 'rsync', 'tree', 'vim', 'wget', 'aptitude' ]
+    name: [ 'python3', 'python3-dev', 'python3-pip', 'bash-completion', 'git', 'htop', 'iputils-ping', 'lsb-release', 'lsof', 'ncdu', 'rsync', 'tree', 'vim', 'wget', 'aptitude', 'fail2ban' ]
     state: latest
     update_cache: yes
 
