--- a/roles/base_system/tasks/main.yml
+++ b/roles/base_system/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Install base packages
   apt:
-    name: [ 'python3', 'python3-dev', 'python3-pip', 'bash-completion', 'git', 'htop', 'iputils-ping', 'lsb-release', 'lsof', 'ncdu', 'rsync', 'tree', 'vim', 'wget', 'aptitude', 'fail2ban' ]
+    name: [ 'python3', 'python3-dev', 'python3-pip', 'bash-completion', 'git', 'htop', 'lsb-release', 'ncdu', 'tree', 'vim', 'wget', 'aptitude', 'fail2ban' ]
     state: latest
     update_cache: yes
 
@@ -27,3 +27,6 @@
 
 - name: Configuring unattended upgrades
   include: unattended_upgrades.yml
+
+- name: Configuring swap file
+  include: swap.yml
