--- a/roles/pihole/tasks/main.yml
+++ b/roles/pihole/tasks/main.yml
@@ -9,16 +9,39 @@
   docker_network:
     name: "{{ item.name }}"
     driver: bridge
-    # enable_ipv6: yes
+    enable_ipv6: no
     ipam_config:
       - subnet: "{{ item.v4.subnet }}"
         gateway: "{{ item.v4.gateway }}"
-      # - subnet: "{{ item.v6.subnet }}"
-      #   gateway: "{{ item.v6.gateway }}"
   with_items:
     - "{{ network.subnets.pihole }}"
     - "{{ network.subnets.vpn }}"
   tags: docker_network
+  when: "{{ network.enable_ipv6 is False }}"
+
+- name: Create docker networks
+  docker_network:
+    name: "{{ item.name }}"
+    driver: bridge
+    enable_ipv6: yes
+    ipam_config:
+      - subnet: "{{ item.v4.subnet }}"
+        gateway: "{{ item.v4.gateway }}"
+      - subnet: "{{ item.v6.subnet }}"
+        gateway: "{{ item.v6.gateway }}"
+  with_items:
+    - "{{ network.subnets.pihole }}"
+    - "{{ network.subnets.vpn }}"
+  tags: docker_network
+  when: "{{ network.enable_ipv6 }}"
+
+- name: Copy dnsmaq config extension
+  template:
+    src: 10-custom-dns.conf
+    dest: "{{ docker_volume_root }}/{{ pihole.volumes.dnsmaq }}/_data/10-custom-dns.conf"
+    owner: "{{ user }}"
+    group: "{{ user }}"
+    mode: 0644
 
 - name: Copy docker-compose.yml file
   template:
