--- a/roles/vpn/templates/openvpn.conf
+++ b/roles/vpn/templates/openvpn.conf
@@ -1,4 +1,4 @@
-server {{ openvpn.vpn_conf.server.netaddress }} {{ openvpn.vpn_conf.server.netmask }}
+server {{ openvpn.conf.server.netaddress }} {{ openvpn.conf.server.netmask }}
 
 verb 3
 
@@ -27,7 +27,10 @@ group nogroup
 comp-lzo no
 
 ### Route Configurations Below
-push "route {{ network.subnets.pihole.v4.netaddress }} {{ network.subnets.pihole.v4.netmask }}"
+push "route {{ network.pihole.v4.netaddress }} {{ network.pihole.v4.netmask }}"
+{% if openvpn.conf.client.route_home_network %}
+push "route {{ network.home_net.v4.netaddress }} {{ network.home_net.v4.netmask }}"
+{% endif %}
 
 ### Push Configurations Below
 # push "block-outside-dns"
