--- a/roles/pihole/templates/docker-compose.yml
+++ b/roles/pihole/templates/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       - /etc/timezone:/etc/timezone:ro
     restart: always
     networks:
-      {{ network.subnets.vpn.name }}:
+      {{ network.vpn.name }}:
         ipv4_address: {{ openvpn.ipv4 }}
         {% if network.enable_ipv6 %}
         ipv6_address: {{ openvpn.ipv6 }}
@@ -99,7 +99,7 @@ services:
       - /etc/timezone:/etc/timezone:ro
     restart: always
     networks:
-      {{ network.subnets.pihole.name }}:
+      {{ network.pihole.name }}:
         ipv4_address: {{ pihole.ipv4 }}
         {% if network.enable_ipv6 %}
         ipv6_address: {{ pihole.ipv6 }}
@@ -114,9 +114,9 @@ services:
 
 # docker network create --ipv6 --driver=bridge --subnet=172.16.0.1/24 --gateway=172.16.0.1 --subnet=2002:ac10:0001::/64 --gateway=2002:ac10:0001::1 vpn-net
 networks:
-  {{ network.subnets.pihole.name }}:
+  {{ network.pihole.name }}:
     external: true
-  {{ network.subnets.vpn.name }}:
+  {{ network.vpn.name }}:
     external: true
 
 volumes:
