--- a/roles/vpn/templates/openvpn.conf
+++ b/roles/vpn/templates/openvpn.conf
@@ -27,9 +27,9 @@ group nogroup
 comp-lzo no
 
 ### Route Configurations Below
-push "route {{ network.pihole.v4.netaddress }} {{ network.pihole.v4.netmask }}"
-{% if openvpn.conf.client.route_home_network %}
-push "route {{ network.home_net.v4.netaddress }} {{ network.home_net.v4.netmask }}"
+push "route {{ networks.pihole.v4.netaddress }} {{ networks.pihole.v4.netmask }}"
+{% if openvpn.conf.server.route_home_network %}
+push "route {{ networks.home_net.v4.netaddress }} {{ networks.home_net.v4.netmask }}"
 {% endif %}
 
 ### Push Configurations Below
