--- a/roles/docker/tasks/rasbian.yml
+++ b/roles/docker/tasks/rasbian.yml
@@ -1,6 +1,7 @@
 - name: Get LSB release
   shell: lsb_release -cs
   register: lsb_release
+  changed_when: False
 
 - name: Add Docker GPG key
   apt_key:
