--- a/roles/new_ovpn_user/tasks/main.yml
+++ b/roles/new_ovpn_user/tasks/main.yml
@@ -8,17 +8,17 @@
 
 - name: Create VPN user
   expect:
-    command: "docker run -v {{ openvpn.volume }}:/etc/openvpn --rm -it kylemanna/openvpn easyrsa build-client-full {{ vpn_username }}"
+    command: "docker run -v {{ volumes.vpn.config.local_folder }}:/etc/openvpn --rm -it kylemanna/openvpn easyrsa build-client-full {{ vpn_username }}"
     responses:
       'Enter PEM pass phrase:': "{{ user_cert_pw }}"
       'Enter pass phrase for \/etc\/openvpn\/pki\/private\/ca\.key:': "{{ ca_cert_pw }}"
 
 - name: Store OVPN profile in config directory
-  shell: "docker run -v {{ openvpn.volume }}:/etc/openvpn --rm kylemanna/openvpn ovpn_getclient {{ vpn_username }} > {{ root_dirs.pihole }}/{{ vpn_username }}.ovpn"
+  shell: "docker run -v {{ volumes.vpn.config.local_folder }}:/etc/openvpn --rm kylemanna/openvpn ovpn_getclient {{ vpn_username }} > {{ root_dirs.pihole }}/{{ vpn_username }}.ovpn"
 
 - name: Only route DNS through VPN
   lineinfile:
     path: "{{ root_dirs.pihole }}/{{ vpn_username }}.ovpn"
     line: "redirect-gateway def1"
     state: absent
-  when: "{{ openvpn.conf.client.only_dns_over_vpn }}"
+  when: openvpn.conf.client.only_dns_over_vpn
