--- a/roles/vpn/templates/openvpn.conf
+++ b/roles/vpn/templates/openvpn.conf
@@ -1,3 +1,5 @@
+{% import "pihole_ipam.jinja2" as pihole_ipam with context %}
+
 server {{ openvpn.conf.server.netaddress }} {{ openvpn.conf.server.netmask }}
 
 verb 3
@@ -29,10 +31,10 @@ comp-lzo no
 ### Route Configurations Below
 push "route {{ networks.pihole.v4.netaddress }} {{ networks.pihole.v4.netmask }}"
 {% if openvpn.conf.server.route_home_network %}
-push "route {{ networks.home_net.v4.netaddress }} {{ networks.home_net.v4.netmask }}"
+push "route {{ networks.host.v4.netaddress }} {{ networks.host.v4.netmask }}"
 {% endif %}
 
 ### Push Configurations Below
 # push "block-outside-dns"
-push "dhcp-option DNS {{ pihole.ipv4 }}"
+push "dhcp-option DNS {{ pihole_ipam.ipam.ipv4 }}"
 push "comp-lzo no"
