--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,14 +1,22 @@
 - name: Install Docker dependencies
   apt:
-    name: [ 'apt-transport-https', 'ca-certificates', 'gnupg-agent', 'software-properties-common', 'python-docker', 'python-pexpect', 'python-pip' ]
+    name: [ 'apt-transport-https', 'ca-certificates', 'gnupg-agent', 'software-properties-common', 'python-docker', 'python-pexpect', 'python-pip', 'libffi-dev' ]
     state: latest
     update_cache: yes
 
-- include: rasbian.yml
-  when: ansible_distribution != 'Debian' and ansible_distribution != 'Ubuntu'
+- name: Check if is rasbian
+  stat:
+    path: /usr/bin/raspi-config
+  register: raspi_config_check
 
-- include: ubuntu.yml
-  when: ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu'
+- set_fact:
+    is_rasbian: "{{ raspi_config_check.stat.exists }}"
+
+- include: rasbian_stretch.yml
+  when: is_rasbian and ansible_distribution_major_version|int == 9
+
+- include: debian_platforms.yml is_rasbian="{{ is_rasbian }}"
+  when: ansible_distribution == 'Debian' and ansible_distribution_major_version|int > 9 or ansible_distribution == 'Ubuntu'
 
 - name: Install docker-compose
   pip:
