--- a/roles/pihole/tasks/create.pihole.user.yml
+++ b/roles/pihole/tasks/create.pihole.user.yml
@@ -5,7 +5,7 @@
     shell: /bin/bash
     groups: docker
     create_home: yes
-    password: "{{ lookup('password', user + '_password.txt chars=ascii_letters,digits,hexdigits,punctuation length=40') | password_hash('sha512') }}"
+    password: "{{ lookup('template', 'standard_pw_gen.jinja2', template_vars=dict(name=user)) | password_hash('sha512') }}"
     update_password: always
   tags: pw
 
